solution for 3273
