# server/api/companyprofile/companyprofile.controller.js
@@ -424,3 +424,42 @@ exports.members = function (req, res) {
         })
     })
 }
+
+exports.updateAutomatedOptions = function (req, res) {
+  CompanyUsers.findOne({domain_email: req.user.domain_email},
+    (err, companyUser) => {
+      if (err) {
+        return res.status(500).json({
+          status: 'failed',
+          description: `Internal Server Error ${JSON.stringify(err)}`
+        })
+      }
+      if (!companyUser) {
+        return res.status(404).json({
+          status: 'failed',
+          description: 'The user account does not belong to any company. Please contact support'
+        })
+      }
+
+      Companyprofile.findOne({_id: companyUser.companyId}, (err, profile) => {
+        if (err) {
+          return res.status(500).json({
+            status: 'failed',
+            description: `Internal Server Error ${JSON.stringify(err)}`
+          })
+        }
+
+        profile.automated_options = req.body.automated_options
+        profile.save((err, updatedProfile) => {
+          if (err) {
+            return res.status(500).json({
+              status: 'failed',
+              description: `Internal Server Error ${JSON.stringify(err)}`
+            })
+          } else {
+            return res.status(200).json({status: 'success', payload: updatedProfile})
+          }
+        })
+      })
+    })
+}
